# RopView

./: CMakeLists.txt  CMakePresets.json  README.md  RopView.cpp  RopView.h  config.ini  config.json  logs.ps1  pch.h  seting_lib.bat  vspkg.json
Include/CustomSection/: ICustomSection.h  ICustomSectionCollection.h
Include/DAL/: IAscan.h  ICscan.h  IDataRange.h  ISyncSource.h
Include/Equipment/: IAcquisitionUnit.h  IAcquisitionUnitCollection.h  IElement.h  IElementCollection.h  IElementOffset.h  IEncoderSensor.h  IEquipmentFactory.h  IInputOutputPort.h  IMultiElementConnector.h  IMultiElementConnectorCollection.h  IMultiElementSplitter.h  IMultiPulserReceiverPort.h  IPin.h  IProbe.h  IProbeConventional.h  IProbeDualRectangularArray.h  IProbeRectangularArray.h  IPulserReceiverPort.h  ISingleElementConnector.h  ISingleElementConnectorSplitter.h  ISingleElementPortSplitter.h  ISinglePulserReceiverPort.h  ITransducer.h  ITransducerConventionalRectangular.h  ITransducerConventionalRound.h  ITransducerRectangularArray.h  IWedge.h  IWedgeBlock.h  IWedgeConventional.h  IWedgeDualRectangularArray.h  IWedgeImmersion.h  IWedgeRectangularArray.h
Include/Indication/: ICustomField.h  ICustomFieldCollection.h  IIndication.h  IIndicationCollection.h  IPatchPosition.h  IReading.h  IReadingCollection.h  IVolumePosition.h  PredefinedReadingNames.h
Include/Inspection/: BeamSet.h  Formation.h  IAcquisitionUnitConfiguration.h  IAcquisitionUnitConfigurationCollection.h  IAngleRange.h  ICalibrationStates.h  ICapabilitiesConfiguration.h  IConfiguration.h  IConfigurationCollection.h  IConventionalBeam.h  IConventionalConfiguration.h  IDigitalInputPinConfiguration.h  IDigitalInputPinConfigurationCollection.h  IDigitizerTechnologyConfiguration.h  IEncoderConfiguration.h  IEncoderConfigurationCollection.h  IFocusing.h  IFocusingLimits.h  IFocusingZone.h  IFormation.h  IFormationCompound.h  IFormationCustom.h  IFormationLinear.h  IFormationSectorial.h  IFullMatrixCaptureConfiguration.h  IFullMatrixCaptureConfigurationCollection.h  IGateConfiguration.h  IGateConfigurationCollection.h  IGateConfigurationFunction.h  IIdentifierCollection.h  IInspectionConfiguration.h  IInspectionConfigurationCollection.h  IInspectionMethod.h  IInspectionMethodCollection.h  IInspectionMethodConventional.h  IInspectionMethodFactory.h  IInspectionMethodPhasedArray.h  IInspectionMethodPulseEcho.h  IInspectionMethodTofd.h  IInspectionMethodTotalFocusing.h  (+13 more)
Include/Instrumentation/: DevicePorts.h  Exception.h  IAScan.h  IAScanCollection.h  IAcquisition.h  IAcquisitionConfiguration.h  IAcquisitionConfigurationCollection.h  IAdjustedParameter.h  IAdjustedParameterCollection.h  IAmplitudeSettings.h  IBeam.h  IBeamFormation.h  IBeamFormationCollection.h  IBeamSet.h  IBeamSetFactory.h  ICScan.h  ICScanCollection.h  IConnector.h  IConnectorCollection.h  ICycleData.h  IDataRange.h  IDevice.h  IDeviceConfiguration.h  IDeviceConfigurationCollection.h  IDeviceDiscovery.h  IDeviceInfo.h  IDeviceNetworkInfo.h  IDigitalBandPassFilter.h  IDigitalBandPassFilterCollection.h  IDigitalInputData.h  IDigitalInputDataCollection.h  IDigitalInputPin.h  IDigitalInputPinCollection.h  IDigitalOutputPin.h  IDigitalOutputPinCollection.h  IDigitizerTechnology.h  IDigitizingSettings.h  IElementDelay.h  IElementDelayCollection.h  IEncoder.h  (+30 more)
Include/PartDefinition/: Geometry.h  IAxis.h  IBarGeometry.h  ICylinderSurface.h  IGeometry.h  IMappingUV.h  IMaterial.h  IPatch.h  IPatchCollection.h  IPipeGeometry.h  IPlaneSurface.h  IPlateGeometry.h  IScanPlan.h  ISpecimen.h  ITubularGeometry.h  IWeld.h  IWeldCap.h  IWeldFillCollection.h  IWeldLandOfCrossPenetration.h  IWeldSection.h  IWeldedSpecimen.h  Specimen.h  Surface.h
Include/Storage/: BufferDataType.h  BufferTypes.h  CustomSectionTypes.h  EquipmentTypes.h  FileManagement.h  FileManagementTypes.h  FileVersionHistory.h  IAcquiredData.h  IAcquisitionData.h  IApplicationStamp.h  IAscanBuffer.h  IAscanBufferBeamKey.h  IAscanBufferBeamKeyCollection.h  IAscanBufferCollection.h  IAscanBufferDescriptor.h  IAscanBufferKey.h  IAscanBufferKeyCollection.h  IAscanBufferKeyEx.h  IAscanData.h  IAscanMergedBufferKey.h  IBufferKey.h  IBufferKeyCollection.h  ICscanBuffer.h  ICscanBufferBeamGateKey.h  ICscanBufferBeamKey.h  ICscanBufferBeamKeyCollection.h  ICscanBufferCollection.h  ICscanBufferDescriptor.h  ICscanBufferGateKeyCollection.h  ICscanBufferKey.h  ICscanBufferKeyCollection.h  ICscanBufferKeyEx.h  ICscanData.h  ICscanMergedBufferGateKey.h  ICscanMergedBufferKey.h  IDataAxis.h  IDataFile.h  IFileSignature.h  IGeoCoordinate.h  IOriginalFileSource.h  (+18 more)
Include/UltrasoundConfiguration/: IAdjustedParameter.h  IAdjustedParameterCollection.h  IAmplitudeSettings.h  IBeam.h  IBeamFormation.h  IBeamFormationCollection.h  IBeamSet.h  IBeamSetFactory.h  IConnector.h  IConnectorCollection.h  IDeviceCapabilities.h  IDigitalBandPassFilter.h  IDigitalBandPassFilterCollection.h  IDigitizerCapabilities.h  IDigitizerTechnology.h  IDigitizingSettings.h  IElementDelay.h  IElementDelayCollection.h  IFilterSettings.h  IFiringBeam.h  IFiringBeamSet.h  IFiringBeamSetCollection.h  IGate.h  IGateCollection.h  IPulserVoltageCollection.h  IPulsingSettings.h  ISmoothingFilterCollection.h  ITcg.h  ITcgPoint.h  ITcgPointCollection.h  ITcgType.h  ITcgTypeCollection.h  ITimeSettings.h  IUltrasoundConfiguration.h  UltrasoundTypes.h
Include/View/: ICircle.h  ICircleCollection.h  IColors.h  IOverlay.h  IPalette.h  IPaletteCollection.h  IPoint.h  ISegment.h  ISegmentCollection.h  IViewProperties.h
QssTemplate/: Genetive.qss
RopView Install Setup/: RopView Install Setup.sln  RopView Install Setup.vdproj
Source/: pch.h
Source/CudaCal/: cud_CscanAnalyze.cu
Source/Data3DProcessing/: Data3DProcess.cpp  Data3DProcess.h  DataProcess.cpp  DataProcess.h
Source/Frames/: AscanFrame.cpp  AscanFrame.h  AviewFrame.cpp  AviewFrame.h  BViewFrame.cpp  BViewFrame.h  BscanFrame.cpp  BscanFrame.h  CscanFrame.cpp  CscanFrame.h  CviewFrame.cpp  CviewFrame.h  SviewFrame.cpp  SviewFrame.h  UpFrame.h  nLogFrame.cpp  nLogFrame.h
sample/: Setup.ovs
(+78 files in other folders)
